--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+#imgh{
+	height: 400px;
+}
+#fb{
+	color:#1F45FC;
+}
+#vb{
+	color: violet;
+}
+#ph{
+	color: white;
+}
+#mail{
+	color: white;
+}
 *{
 	
 }
