--- a/style.css
+++ b/style.css
@@ -34,20 +34,18 @@ body{
 #vb{
 	color: violet;
 }
-#ph{
+#ph, #mail{
 	color: white;
 }
-#mail{
-	color: white;
-}
+
 .fonts{
     font-family: 'Lobster', cursive;
 
 }
 div.quote{
     position: absolute;
-    top: 35%;
-    left: 35%;
+    top: 60%;
+    left: 57%;
     background-color: rgba(0,0,0,0.5);
     padding: 30px;
     font-size: 30px;
@@ -90,14 +88,18 @@ hr.divided{
 	font-family: 'Lobster', cursive;
 }
 
-h2{
-	font-family: 'Imbue', serif;
+#feature{
+	font-family: 'Noto Serif';
 }
-
-.background_img{
-    background-image: url(image/bground.jpg);
+hr.divided{
+    width: 220px;
+    margin: auto;
+    border:2px solid #2980b9;
+}
+/*.background_img{
+    background-image: url(image/bg7.jpg);
     background-attachment: fixed;
-}
+}*/
 
 /*slider plugin*/
 
